<?xml version="1.0"?>
<package format="2">
  <name>smart_cpp_ros_node</name>
  <version>0.0.1</version>
  <description>The smart_cpp_ros_node package</description>

  <maintainer email="samuel.prieto@nyu.edu">Samuel A. Prieto</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>
  <exec_depend>message_generation</exec_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>roscpp</depend>
  <depend>rosgraph_msgs</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>

  <exec_depend>rqt_console</exec_depend>
  <exec_depend>rqt_reconfigure</exec_depend>

</package>
